# dotfiles

./: .gitconfig  .zprofile  .zshrc  starship.toml
.config/: starship.toml
.config/alacritty/: alacritty.toml
.config/btop/: btop.conf  btop.log.1
.config/hypr/: hyprland.conf  hyprpaper.conf  keymaps.conf  start.sh
.config/kitty/: kitty.conf
.config/nvim/: init.lua
.config/quickshell/nucleus-shell/: CMakeLists.txt  shell.qml
.config/quickshell/nucleus-shell/modules/interface/intelligence/: Intelligence.qml
.config/quickshell/nucleus-shell/modules/interface/powermenu/: Powermenu.qml
.config/quickshell/nucleus-shell/modules/interface/screencapture/: ScreenCapture.qml
.config/quickshell/nucleus-shell/modules/interface/sidebarLeft/: IntelligencePanel.qml  SidebarLeft.qml  SidebarLeftContent.qml
.config/quickshell/nucleus-shell/modules/interface/sidebarRight/: SidebarRight.qml  SidebarRightContent.qml
.config/quickshell/nucleus-shell/modules/interface/sidebarRight/content/: ThemeToggle.qml
.config/quickshell/nucleus-shell/services/: WallpaperSlideshow.qml
.config/tmux/: tmux.conf
.config/waybar/: config  style.css
.config/yazi/: package.toml  theme.toml  yazi.toml
.config/zed/: keymap.json  settings.json
alacritty/: alacritty.toml
btop/: btop.conf
hypr/: hyprland.conf  hyprpaper.conf
kdeconnect/: certificate.pem  config  privateKey.pem  trusted_devices
nvim/: lazy-lock.json  lazyvim.json
scripts/: any21080p.sh  flac2mp3.sh  project.sh  refresh-minecraft.sh  rollback-pacman.sh
tmux/: tmux.conf
yazi/: theme.toml
(+31 files in other folders)
